assets/css/styles.css
/* General Styles */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-family: "Lato";
}

body {
    font-size: 100%;
}

a {
    text-decoration: none;
    color: #66fcf1;
    transition: color .1s ease-in-out;
    cursor: pointer;
}

p, li {
    font-size: 1.3rem;
}

a:hover {
    color: white;
}

ul, nav {
    list-style: none;
}

section {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 6.25rem 5rem;
    background-color: #0b0c10;
    color: #66fcf1;
}

section:nth-child(odd) {
    background-color: #45a29e;
    color: #1f2833;
}

section h3.title {
    text-transform: capitalize;
    font: 2.5rem "Comfortaa";
    margin-bottom: 2rem;
    text-align: center;
}

@media (max-width: 700px) {
    p, li {
        font-size: 1rem;
    }

    section {
        padding: 2rem 0;
    }

    section h3.title {
        font-size: 2rem;
    }
} 

/* Header Styles */

header {
    position: fixed;
    width: 100%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-family: "Comfortaa";
    height: 3.2rem;
    z-index: 10;
    color: #66fcf1;
}

#nav-title {
    margin: 0 1rem;
    z-index: 2;
    font-weight: normal;
    opacity: 0;
}

header nav {
    display: flex;
    z-index: 1;
}

#navbar-background {
    position: absolute;
    top: 0;
    left:0;
    height: 100%;
    width: 100%;
    background-color: #1f2833;
    opacity: 0;
}

header nav li {
    margin: 0 1rem;
    max-width: 100%;
    max-height: 100%;
}

/* Hero Styles */

#hero {
    position: relative;
    justify-content: center;
    text-align: center;
    min-height: 100vh;
    color: #66fcf1;
    z-index: -1;
}

#hero h1 {
    font: 8rem "Comfortaa";
    margin-top: 6.25rem;
    opacity: 0;
    animation: 1s slidefade .5s forwards;
}

#hero h3 {
    font: 1.5rem "Lato";
    opacity: 0;
    color: #ffffff;
    margin-top: 1.2rem;
    animation: 1s fade 1.5s forwards;
}


@keyframes slidefade {
    100% {
        opacity: 1;
        margin-top: 0;
    }
}

@keyframes fade {
    100% {
        opacity: 1;
    }
}

@media (max-width: 700px) {
    
    #hero h1 {
        font-size: 4rem;
    }

    #hero h3 {
        font: 1rem;
    }

} 

/* About Styles */

.about-content {
    display: flex;
    width: 100%;
    height: 100%;
    flex-wrap: nowrap;
    justify-content: center;
}

#about img {
    border-radius: 50%;
}

.about-image {
    flex: 1 1 30%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 2rem;
}

.about-text {
    flex: 1 1 70%;
    margin: 0 3.2rem;
}

#skills {
    display: flex;
    font-family: "Comfortaa";
    margin-top: 3.2rem;
}

#skills ul {
    height: 6.25rem;
    font-size: 1.3rem;
    font-weight: bold;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    flex: 1 1 1;
}

#skills li {
    margin: 0.3rem;
}

#skills h3 {
    flex: 1 1 30%;
    font-size: 1.3rem;
    text-align: right;
    margin-right: 1.8rem;
    margin-bottom: 2rem;
}

@media (max-width: 1200px) {
    #skills {
        flex-wrap: wrap;
        align-items: center;
    }

    #skills ul {
        height: 10rem;
    }

    #skills h3 {
        text-align: center;
    }
} 

@media (max-width: 1000px) {
    .about-content {
        flex-wrap: wrap;
        align-items: center;
        justify-content: center;
    }

    #about img {
        height: 50%;
        width: 50%;
    }
} 

@media (max-width: 700px) {
    
    #skills li {
        font-size: 1rem;
    }

} 

/* Projects Styles */
#projects {
    min-height: 100vh;
}

#projects-content {
    display: flex;
    width: 100%;
    flex-wrap: nowrap;
    justify-content: center;
}

.project-container {
    position: relative;
    flex: 1 1 30%;
    margin: 2rem;
}

.project-container h3 {
    margin: 2rem 0;
    text-align: center;
    font-size: 2rem;
}

.project-display {
    position: relative;
    flex: 1 1 1;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    max-width: 100%;
    max-height: 100%;
    text-align: center;
    background-color: #45a29e;
}

.project-display img {
    max-width: 100%;
    max-height: 100%;
    top: 0;
    left: 0;
}

.project-display i {
    flex: 1 1 1;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    margin: auto;
    border-radius: 50%;
    opacity: 0;
    font-size: 2rem;
    text-align: center;
    color: #000000;
    width: 3.75rem;
    height: 3.75rem;
    line-height: 3.75rem;
    background: #ffffff;
    transform: scale(0);
    transition: transform 300ms 0ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
    color: #45a29e;
}

.project-display a {
    display: block;
    top: 0;
    bottom: 0;
    right: 0;
    left: 0;
    position: absolute;

}

.project-display * {
    transition: all .35s ease-in-out;
}

.project-display:hover i {
    transform: scale(1);
    transition: transform 300ms 100ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
    opacity: 1;
}

.project-display:hover img{
    opacity: 0.3;
    filter: grayscale(100)
}

.github {
    font-size: 2.5rem;
    margin-top: 5rem;
    transition: transform .15s ease-in-out;
}

.github:hover {
    transform: scale(1.1);
    transition: transform .25s ease-in-out;
}

@media (max-width: 800px) {
    
    #projects-content {
        flex-wrap: wrap;
    }

    .project-display {
        width: 80vw;
    }

    .project-container h3 {
        font-size: 1.5rem;
    }

    .github {
        margin-top: 2rem;
        font-size: 2rem;
    }

} 

/* Contact Styles */

.contacts-content {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    width: 100%;
}

.contact-email {
    font-size: 1.4rem;
}

.contact-email i {
    margin-right: 1rem;
}

.social-links {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    width: 50%;
    justify-content: center;
}

#contact li {
    flex: 1 0 auto;
    align-self: auto;
    text-align: center;
}

#contact a {
    color: #1f2833;
    transition: color .1s ease-in-out;
    margin: 1rem;
}

#contact a:hover {
    color: white;
}

#contact p {
    margin-bottom: 2rem;
}

